--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 language: pt-br
 ---
-
+<progress value="0"></progress>
 <article class="post-content">
     <header class="post-header">
         <h1 class="title title-big">{{ page.title }}</h1>
