Add new post about flags

--- a/assets/scss/atoms/typography.scss
+++ b/assets/scss/atoms/typography.scss
@@ -59,7 +59,8 @@
     /*  Textos
         ========================================================================== */
 
-        p {
+        p,
+        .main-posts ul {
             color: #fff;
             font-size: 24px;
             line-height: 34px;
