--- a/assets/scss/organisms/layout.scss
+++ b/assets/scss/organisms/layout.scss
@@ -139,7 +139,8 @@
                 text-align: center;
             }
 
-            .post-content p {
+            .post-content p,
+            .post-content ul {
                 font-size: 18px;
                 line-height: 28px;
                 text-align: justify;
