Adjustments on homepage and edit some images in post about Dev in Company

--- a/assets/scss/organisms/layout.scss
+++ b/assets/scss/organisms/layout.scss
@@ -299,8 +299,9 @@
             }
     }
 
-    @media only screen and (min-width: 1300px) {
-
+    @media only screen and (min-width: 1375px) {
+        
+        .header-home .btn-color { position: absolute; }
         .btn-color { position: fixed; }
 
     }
