Adjustment on title blog post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,10 @@
 <head>
     <meta charset="utf-8">
+    {% if page.type == 'Post' %}
+    <title>{{ page.title }} - Blog | Raphael Fabeni</title>
+    {% else %}
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    {% endif %}
 
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
