--- a/assets/scss/atoms/typography.scss
+++ b/assets/scss/atoms/typography.scss
@@ -13,9 +13,30 @@
 
         @font-face {
             font-family: 'Ubuntu';
+            font-style: italic;
+            font-weight: 300;
+            src: local('Ubuntu Light Italic'), local('Ubuntu-LightItalic'), url(http://fonts.gstatic.com/s/ubuntu/v7/DZ_YjBPqZ88vcZCcIXm6VobN6UDyHWBl620a-IRfuBk.woff) format('woff');
+        }
+
+        @font-face {
+            font-family: 'Ubuntu';
             font-style: normal;
             font-weight: 400;
             src: local('Ubuntu'), url(http://themes.googleusercontent.com/static/fonts/ubuntu/v5/_xyN3apAT_yRRDeqB3sPRg.woff) format('woff');
+        }
+
+        @font-face {
+            font-family: 'Ubuntu';
+            font-style: normal;
+            font-weight: 500;
+            src: local('Ubuntu Medium'), local('Ubuntu-Medium'), url(http://fonts.gstatic.com/s/ubuntu/v7/OsJ2DjdpjqFRVUSto6IffD8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
+        }
+
+        @font-face {
+            font-family: 'Ubuntu';
+            font-style: normal;
+            font-weight: 700;
+            src: local('Ubuntu Bold'), local('Ubuntu-Bold'), url(http://fonts.gstatic.com/s/ubuntu/v7/0ihfXUL2emPh0ROJezvraD8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
         }
 
     body {
@@ -74,6 +95,11 @@
             font-size: 14px;
             color: #888;
         }
+
+        b,
+        strong { font-weight: 500; }
+
+        i { font-style: italic; }
 
 
     /*  Links
