Add support for syntax code

--- a/assets/scss/organisms/layout.scss
+++ b/assets/scss/organisms/layout.scss
@@ -216,6 +216,13 @@
                 z-index: 1;
             }
 
+            /*  Syntax
+                ========================================================================== */
+                .highlight {
+                    padding: 10px 20px;
+                    @include box-shadow(0px 0px 50px 0 rgba(0,0,0,.3) inset);
+                }
+
         /*  Disqus
             ========================================================================== */
             .main-disqus {
