--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,6 +14,7 @@
 /*  Molecules
     ========================================================================== */
     @import "molecules/navigation";
+    @import "molecules/syntax/monokai";
 
 /*  Organisms
     ========================================================================== */
