Add new post about Front in Sampa and some adjustment on figure presentation

--- a/assets/scss/organisms/layout.scss
+++ b/assets/scss/organisms/layout.scss
@@ -235,6 +235,12 @@
                 z-index: 1;
             }
 
+            .presentation iframe {
+                width: 100%;
+                height: auto;
+                max-width: 800px;
+            }
+
             /*  Syntax
                 ========================================================================== */
                 .highlight {
