--- a/assets/scss/organisms/layout.scss
+++ b/assets/scss/organisms/layout.scss
@@ -235,10 +235,17 @@
                 z-index: 1;
             }
 
-            .presentation iframe {
+            .presentation {
                 width: 100%;
                 height: auto;
                 max-width: 800px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .post-content figure.presentation {
+                margin-left: auto;
+                margin-right: auto;
             }
 
             /*  Syntax
