Add pagination on blog

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,8 @@
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
     <link rel="shortcut icon" href="{{ site.baseurl }}favicon.ico" type="image/x-icon" />
 
+    <link href='http://raphaelfabeni.com.br/feed.xml' rel='alternate' type='application/atom+xml'>
+
     <!-- CSS -->
     <link rel="stylesheet" href="{{ site.baseurl }}build/css/main.min.css">
     
