--- a/assets/scss/molecules/navigation.scss
+++ b/assets/scss/molecules/navigation.scss
@@ -72,6 +72,13 @@
                 display: inline-block;
             }
 
+        /*  Pagination
+            ========================================================================== */
+            .pagination {
+                padding-top: 10px;
+                text-align: center;
+            }
+
     }
 
     /*
@@ -116,8 +123,5 @@
                         text-align: left;
                     }
 
-
-        /*  Footer
-            ========================================================================== */
 
    }
