Add new draft about #1postperweek and some CSS adjustments on post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,10 @@ language: pt-br
         <p class="date text-center">{{ page.date | date: "%-d/%m/%Y" }}</p>
     </header>
 
+    <figure class="text-center loading image-opening">
+        <img src="{{ site.baseurl}}build/img/posts/{{ page.image }}" alt="{{ page.description }}">
+    </figure>
+
     {{ content }}
 </article>
 
