Add a simple draft for post about git and some adjustment on post template

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,11 @@ language: pt-br
     </header>
 
     <figure class="text-center loading image-opening">
+        {% if page.alt %}
+        <img src="{{ site.baseurl}}build/img/posts/{{ page.image }}" alt="{{ page.alt }}">
+        {% else %}
         <img src="{{ site.baseurl}}build/img/posts/{{ page.image }}" alt="{{ page.description }}">
+        {% endif %}
     </figure>
 
     {{ content }}
