--- a/assets/scss/organisms/layout.scss
+++ b/assets/scss/organisms/layout.scss
@@ -155,7 +155,8 @@
             }
 
             .post-content p,
-            .post-content ul {
+            .post-content ul,
+            .post-content ol {
                 font-size: 18px;
                 line-height: 28px;
                 text-align: justify;
