--- a/assets/scss/atoms/typography.scss
+++ b/assets/scss/atoms/typography.scss
@@ -81,7 +81,8 @@
         ========================================================================== */
 
         p,
-        .main-posts ul {
+        .main-posts ul,
+        .main-posts ol {
             color: #fff;
             font-size: 24px;
             line-height: 34px;
