Update post about fork

--- a/teste.css
+++ b/teste.css
@@ -1,3 +1,6 @@
-.class { border: solid 1px red;}
-.class:hover { border: solid 1px blue;}
-.class-inverse { border: none;background-color: red;}
+.class{border: solid 1px red;}
+.class:hover{border: solid 1px blue;}
+.class-inverse{
+    border: none;background-color: red;
+    width: 100px;
+}
