--- a/assets/scss/organisms/layout.scss
+++ b/assets/scss/organisms/layout.scss
@@ -139,6 +139,8 @@
                 line-height: 38px;
             }
 
+            .post-content h3 { font-size: 24px; }
+
             .post-content h2,
             .post-content h3,
             .post-content h4 {
@@ -270,6 +272,7 @@
 
                 .highlight pre {
                     color: #eee;
+                    text-indent: -6px;
                     white-space: pre-wrap;
                     white-space: -moz-pre-wrap;
                     white-space: -pre-wrap;
@@ -280,11 +283,6 @@
                 .highlight code {
                     background-color: transparent;
                     color: inherit;
-                }
-
-                .language-css > span:first-child {
-                    position: relative;
-                    left: -4px;
                 }
 
                 /* Adjustments for code inside text */
