Fix some typo error

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
     <h1 class="title"><a class="hover" href="/">Raphael Fabeni</a></h1>
     <h2 class="subtitle">Front-end developer</h2>
     {% if page.type != 'Home' %}
-    {% include social.html %}}
+    {% include social.html %}
     {% endif %}
-    
+
     <nav class="nav-main">
         <ul class="main-menu">
             <li>
