--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     {% if page.type != 'Home' %}
     {% include breadcrumbs.html %}
     {% endif %}
-    <main role="main" class="main {% if page.type == 'Post' %}main-posts{% endif %} container">
+    <main role="main" class="main {% if page.type == 'Post' %}main-posts{% endif %} container" id="conteudo">
         {{ content }}
     </main>
 
