--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,20 +4,28 @@ language: pt-br
 ---
 <progress value="0"></progress>
 <article class="post-content" id="conteudo">
-    <header class="post-header">
-        <h1 class="title title-big">{{ page.title }}</h1>
-        <p class="date text-center">{{ page.date | date: "%-d/%m/%Y" }}</p>
-    </header>
+  <header class="post-header">
+    <h1 class="title title-big">{{ page.title }}</h1>
+    <p class="date text-center">{{ page.date | date: "%-d/%m/%Y" }}</p>
+  </header>
 
-    <figure class="text-center loading image-opening">
-        {% if page.alt %}
-        <img src="{{ site.baseurl}}build/img/posts/{{ page.image }}" alt="{{ page.alt }}">
-        {% else %}
-        <img src="{{ site.baseurl}}build/img/posts/{{ page.image }}" alt="{{ page.description }}">
-        {% endif %}
-    </figure>
+  <figure class="text-center loading image-opening">
+    {% if page.alt %}
+      {% if page.imageExternal %}
+        <img src="{{ page.image }}" alt="{{ page.alt }}">
+      {% else %}
+        <img src="{{ site.baseurl}}build/img/posts/{{ page.image }}" alt="{{ page.alt }}">  
+      {% endif %}
+    {% else %}
+      {% if page.imageExternal %}
+        <img src="{{ page.image }}" alt="{{ page.description }}">
+      {% else %}
+        <img src="{{ site.baseurl}}build/img/posts/{{ page.image }}" alt="{{ page.description }}">  
+      {% endif %}
+    {% endif %}
+  </figure>
 
-    {{ content }}
+  {{ content }}
 </article>
 
 {% include share.html %}
