[FIX] Fixed the html lang and some buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,13 @@
 <!doctype html>
-<html lang="{{ page.language }}">
+{% if page.type == 'Post' %}
+    {% if page.lang == undefined or page.lang == "pt-br" %}
+        <html lang="pt-br">
+    {% elsif page.lang == "en" %}
+        <html lang="en">
+    {% endif %}
+{% else %}
+    <html lang="{{ page.language }}">
+{% endif %}
 
 {% include head.html %}
 
