[WIP] Added the hreflang attribute in head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,8 @@
     {% else %}
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     {% endif %}
+    
+    {% include post.html %}
 
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
