--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,11 +15,16 @@
                 <a class="nav-link" href="{{ site.baseurl }}blog"><i class="fa fa-pencil"></i> Blog</a>
                 <ul class="sub-menu">
                     <li
-                    {% if page.type  == 'Archive' and page.language == 'pt-br' %} class="active"{% endif %}>
+                        {% if page.type  == 'Archive' and page.language == 'pt-br' %} class="active"{% endif %}
+                        {% if page.type  == 'Post' and page.lang == 'pt-br' %} class="active"{% endif %}
+                        {% if page.type  == 'Post' and page.lang == undefined %} class="active"{% endif %}
+                    >
                         <a href="{{ site.baseurl }}blog">Portuguese</a>
                     </li>
                     <li
-                    {% if page.type  == 'Archive' and page.language == 'en' %} class="active"{% endif %}>
+                        {% if page.type == 'Archive' and page.language == 'en' %} class="active"{% endif %}
+                        {% if page.type == 'Post' and page.lang == 'en' %} class="active"{% endif %}
+                    > 
                         <a href="{{ site.baseurl }}en/blog">English</a>
                     </li>
                 </ul>
