--- a/assets/scss/atoms/grid.scss
+++ b/assets/scss/atoms/grid.scss
@@ -35,8 +35,12 @@
         .main {
             max-width: 1100px;
             margin: 0 auto;
+            &.main-full {
+                max-width: 100%;
+            }
+            &.main-posts {
+                max-width: 980px;
+            }
         }
-
-        .main-posts.main { max-width: 980px; }
     
    }
